[package]
name = "js_ffi"
version = "0.1.0"
authors = ["Richard Anaya"]
edition = "2018"
description = "A FFI library for calling javascript"
license = "MIT OR Apache-2.0"
categories = ["wasm", "no-std"]
repository = "https://github.com/richardanaya/js_ffi"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cstring = "0.0.4"
web_common = "0.0.1"
callback = "0.1.0"