[package]
name = "js_ffi"
version = "0.6.4"
authors = ["Richard Anaya"]
edition = "2018"
description = "A FFI library for calling javascript"
license = "MIT OR Apache-2.0"
categories = ["wasm", "no-std"]
repository = "https://github.com/richardanaya/js_ffi"
readme="README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cstring = "0.0"
anystring = "0.0"
spin = "0.5"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]
