[package]
name = "example"
version = "0.1.0"
authors = ["richard <richard>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js_ffi = {path="../../"}
wee_alloc = "0"

[lib]
crate-type =["cdylib"]

[profile.release]
lto = true